# Crucible-proxychecker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  proxy_checker.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crucible_proxy/: __init__.py  checker.py  cli.py  config.py  constants.py  fetcher.py  models.py  output.py  session.py  utils.py
docs/: api.md  cli.md  export.md  index.md  quickstart.md  session.md
examples/: proxy_suite.py
tests/: test_checker.py  test_models.py  test_output.py  test_parser.py
