[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "crucible-proxychecker"
version     = "7.0.1"
description = "Fast, multi-source proxy scraper and validator — CLI + library."
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "cruciblelab" },
]

keywords = [
    "proxy", "socks5", "socks4", "http-proxy", "proxy-checker",
    "proxy-scraper", "anonymity", "networking",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

dependencies = [
    "requests[socks]>=2.31.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
toml = ["tomli>=2.0.0; python_version < '3.11'"]
dev  = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "tomli>=2.0.0",
]

[project.urls]
Homepage      = "https://github.com/cruciblelab/Crucible-proxychecker"
Repository    = "https://github.com/cruciblelab/Crucible-proxychecker"
Documentation = "https://github.com/cruciblelab/Crucible-proxychecker#readme"
"Bug Tracker" = "https://github.com/cruciblelab/Crucible-proxychecker/issues"
Changelog     = "https://github.com/cruciblelab/Crucible-proxychecker/blob/main/CHANGELOG.md"

[project.scripts]
crucible-proxychecker = "crucible_proxy.cli:main"

# ── Tool config ───────────────────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["crucible_proxy"]

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["crucible_proxy"]
omit   = ["tests/*"]
